AWS Lex V2 Crypto Bot

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,24 @@
 *.swp
 package-lock.json
-__pycache__
 .pytest_cache
-.venv
 *.egg-info
 
-# CDK asset staging directory
-.cdk.staging
-cdk.out
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
+.layer
+.venv
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# CDK Context & Staging files
+.cdk.staging/
+cdk.out/
